# LanguageFactory

./: .gitignore  CMakeLists.txt  README.md  expressions.txt
benchmarks/: expressions.txt  parse.cpp
include/: arena.hpp  emptyToken.hpp  formulaDispatcher.hpp  hash.hpp  operatorDispatcher.hpp  parser.hpp  token.hpp  valueDispatcher.hpp
include/formula/: formula.hpp  operator.hpp
include/value/: cellReference.hpp  value.hpp
include/wrapper/: formulaWrapper.hpp  wrapper.hpp
src/: arena.cpp  cellReference.cpp  formulaDispatcher.cpp  main.cpp  operatorDispatcher.cpp  parser.cpp  valueDispatcher.cpp
tests/: testCellReference.cpp
